# pywr-schema

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json  release-plz.toml
.github/: dependabot.yml
.github/workflows/: release-plz.yml  rust.yml
pywr-schema-macros/: Cargo.toml
pywr-schema-macros/src/: lib.rs
pywr-v1-schema/: CHANGELOG.md  Cargo.toml
pywr-v1-schema-macros/: CHANGELOG.md  Cargo.toml
pywr-v1-schema-macros/src/: lib.rs
pywr-v1-schema/src/: edge.rs  lib.rs  model.rs  tables.rs
pywr-v1-schema/src/nodes/: break_link.rs  core.rs  delay_node.rs  loss_link.rs  mod.rs  multi_split.rs  piecewise_link.rs  river_gauge.rs  river_split.rs  river_split_with_gauge.rs  virtual_storage.rs
pywr-v1-schema/src/parameters/: aggregated.rs  asymmetric_switch.rs  control_curves.rs  core.rs  data_frame.rs  deficit.rs  discount_factor.rs  flow.rs  hydropower.rs  indexed_array.rs  interpolated.rs  mod.rs  polynomial.rs  profiles.rs  rolling_mean_flow_node.rs  scenario_wrapper.rs  storage.rs  tables.rs  thresholds.rs
pywr-v1-schema/tests/models/: dangling_link.json  timeseries2_hdf.json
pywr-v1-validator/: CHANGELOG.md  Cargo.toml
pywr-v1-validator/src/: main.rs
pywr_schema/: Cargo.toml
pywr_schema/src/: edge.rs  lib.rs  model.rs  tables.rs
pywr_schema/src/nodes/: break_link.rs  core.rs  delay_node.rs  loss_link.rs  mod.rs  multi_split.rs  piecewise_link.rs  river_gauge.rs  river_split.rs  river_split_with_gauge.rs  virtual_storage.rs
pywr_schema/src/parameters/: aggregated.rs  asymmetric_switch.rs  control_curves.rs  core.rs  data_frame.rs  deficit.rs  discount_factor.rs  flow.rs  hydropower.rs  indexed_array.rs  interpolated.rs  mod.rs  polynomial.rs  profiles.rs  rolling_mean_flow_node.rs  scenario_wrapper.rs  storage.rs  tables.rs  thresholds.rs
pywr_schema/tests/models/: mean_flow_parameter.json  reservoir_net_abstraction.json  virtual_storage9.json
pywr_validator/: Cargo.toml
pywr_validator/src/: main.rs
