[workspace]
resolver = "2"
members = [
    "pywr-v1-schema-macros",
    "pywr-v1-schema",
    "pywr-v1-validator",
]

[workspace.package]
authors = ["James Tomlinson <tomo.bbe@gmail.com>"]
version = "0.16.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pywr/pywr-schema"
