[package]
name = "pywr-schema-macros"
version = "0.11.1"
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pywr_schema_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0.57"
quote = "1.0.35"


