[package]
name = "pywr-v1-schema-macros"
version = "0.13.1"
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0.72"
quote = "1.0.36"


