[package]
name = "pywr-v1-schema-macros"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0.72"
quote = "1.0.36"


