[package]
name = "pywr-v1-schema-macros"
description = "Procedural macros for pywr-v1-schema"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0.111"
quote = "1.0.42"


