[package]
name = "pywr-v1-schema"
description = "Pywr v1.x schema for validation and (de)serialization of model JSON files."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"
pywr-v1-schema-macros = { path = "../pywr-v1-schema-macros", version = "0.14" }
strum = "0.26"
strum_macros = "0.26"
chrono = { version = "0.4.34", features = ["serde"] }
