[package]
name = "pywr-v1-validator"
version = "0.13.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pywr-v1-schema = { path = "../pywr-v1-schema", version = "0.13.1" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
