[package]
name = "pywr-v1-validator"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pywr-v1-schema = { path = "../pywr-v1-schema", version = "0.13.1" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
