[package]
name = "pywr-v1-validator"
description = "Pywr v1.x model JSON validator."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pywr-v1-schema = { path = "../pywr-v1-schema", version = "0.14" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
