[package]
name = "pywr-schema"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "pywr_schema"
path = "src/lib.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.14", features = ["serde", "serde-well-known", "serde-human-readable"] }
